--- a/InputConnect/Debug/config.ini
+++ b/InputConnect/Debug/config.ini
@@ -1,6 +1,6 @@
 [Main]
 voice=0
-speed=4
-file=C:\Users\liuyanbao\Desktop\ÁÙ¸ßÆôÃ÷.txt
-Chapter=422
-vol=100
+speed=6
+file=C:\Users\liuyanbao\Desktop\ÌÆ×©.txt
+Chapter=1092
+vol=126
